<resources>
    <string name="app_name">SafeSteps</string>
</resources>