appId: com.safesteps
name: Sanity Test
---
- launchApp:
    clearState: true
    permissions:
      location: allow

# 1. PANTALLA INICIAL
- extendedWaitUntil:
    visible: ".*SafeSteps.*"
    timeout: 30000

# 2. CONFIGURACIÓ DE RUTA
- extendedWaitUntil:
    visible:
      id: "input_desti"
    timeout: 30000

- tapOn:
    id: "input_desti"
- inputText: "Sagrada Familia, Barcelona"
- tapOn:
    text: "Sagrada Familia.*"
    index: 1

- back

# Modificar Origen
- extendedWaitUntil:
    visible:
      id: "input_origen"
    timeout: 30000

- tapOn:
    id: "input_origen"
- inputText: "Cosmocaixa, Barcelona"
- tapOn:
    text: "CosmoCaixa.*"
    index: 1

- back

# 3. CÀLCUL DE RUTA I INFO

- extendedWaitUntil:
    visible: ".*km|.*m"
    timeout: 30000

# 4. CANVI DE MODES DE RUTA

- extendedWaitUntil:
    visible:
      id: "btn_safety"
    timeout: 30000

- tapOn:
    id: "btn_safety"
- tapOn:
    id: "btn_clima"
- tapOn:
    id: "btn_accessibility"


- extendedWaitUntil:
    visible:
      id: "btn_places"
    timeout: 30000

- tapOn:
    id: "btn_places"


- extendedWaitUntil:
    visible:
      id: "btn_satellit"
    timeout: 30000

- tapOn:
    id: "btn_satellit"

- extendedWaitUntil:
    visible:
      id: "btn_ubicacio_actual"
    timeout: 30000

- tapOn:
    id: "btn_ubicacio_actual"

- extendedWaitUntil:
    visible:
      id: "btn_incidencies"
    timeout: 30000


# 6. INICIAR RUTA

- extendedWaitUntil:
    visible:
      id: "btn_start_route"
    timeout: 30000

- tapOn:
    id: "btn_start_route"

# 7. VALIDAR PANTALLA DE RUTA ACTIVA

- extendedWaitUntil:
    visible:
      id: "btn_close_route"
    timeout: 30000

- tapOn:
    id: "btn_close_route"

